tests/rosetta/out/Haskell/associative-array-merging.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/associative-array-merging.hs:142:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/associative-array-merging.hs:133:1
                 /workspace/mochi/tests/rosetta/out/Haskell/associative-array-merging.hs:142:1
    |
142 | main = do
    | ^^^^
